# allegro-scraper

./: .gitignore  README.md  setup.cfg  tox.ini
.github/: release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: allegro-spider-ci.yml  python-publish.yml
allegro/: __init__.py  __main__.py  argparser.py  constants.py
allegro/console/: __init__.py
allegro/parsers/: __init__.py  allegro_parser.py  arguments.py  arguments_parser.py  crawler.py  offer.py  product_parser.py  website.py
allegro/proxy/: __init__.py  free_proxy.py  proxy_checker.py  proxy_file.py  proxy_gatherer.py
allegro/search/: __init__.py  crawl.py  crawler.py  product.py
allegro/types/: __init__.py  crawler.py  filters.py  options.py  types_crawler.py
allegro/utils/: __init__.py  check.py  soup.py
tests/: README.md  test_crawler.py  test_entry_point.py  test_product.py  test_proxy.py
tests/cassettes/: test_check_proxies.yaml  test_crawl.yaml  test_crawl_max_results.yaml  test_free_proxies.yaml  test_scrape_from_url.yaml  test_scrape_single_product.yaml  test_wrong_search.yaml
