[metadata]
version = 3.5.2

name = allegro-spider
url = https://github.com/xnetcat/allegro-spider
download_url = https://pypi.org/project/allegro-spider
author = xnetcat
author_email = xnetcat.dev@gmail.com
license = MIT
description = Allegro spider, product scrapper
long_description = file:README.md
long_description_content_type = text/markdown
keywords = allegro spider scrapper bs4 requests beautifulsoup4
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Software Development :: Libraries

[options]
include_package_data = true
install_requires =
    beautifulsoup4
    requests
python_requires = >=3.6
packages = find:

[options.extras_require]
test =
    pytest
dev =
    tox
    mypy
    flake8

[options.entry_points]
console_scripts=
    allegro-spider = allegro-spider:console_entry_point

[flake8]
max-line-length = 100
